--- a/luffy-api-web/pom.xml
+++ b/luffy-api-web/pom.xml
@@ -1,15 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <parent>
+        <artifactId>luffy-api</artifactId>
+        <groupId>com.luffy.api</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.luffy.api</groupId>
-    <artifactId>luffy-api</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>luffy-api-web</module>
-        <module>luffy-api-utils</module>
-    </modules>
-    <name>luffy-api</name>
+    <artifactId>luffy-api-web</artifactId>
+    <packaging>war</packaging>
+    <name>luffy-api-web</name>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
@@ -19,4 +19,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+        <finalName>luffy-api-web</finalName>
+    </build>
 </project>
